# handmade_kissicp

./: README.md
adaptive_threshold/: CMakeLists.txt
adaptive_threshold/include/adaptive_threshold/: adaptive_threshold.h
adaptive_threshold/src/: adaptive_threshold.cpp  test_adaptive_threshold.cpp
constant_velocity/: CMakeLists.txt
constant_velocity/include/constant_velocity/: constant_velocity_model.h
constant_velocity/src/: constant_velocity_model.cpp  test_velocity_model.cpp
evaluation/: CMakeLists.txt
evaluation/include/evaluation/: odometry_evaluator.h
evaluation/scripts/: csv_visualizer.py  plot_trajectory.py
evaluation/src/: complete_kitti_evaluation.cpp  kitti_evaluation.cpp  odometry_evaluator.cpp  simple_test.cpp  test_evaluation.cpp
kiss_icp_core/: CMakeLists.txt  package.xml
kiss_icp_core/cmake/: kiss_icp_coreConfig.cmake.in
kiss_icp_core/include/kiss_icp_core/: kiss_icp.h  local_map.h  odometry_types.h
kiss_icp_core/src/: kiss_icp.cpp  local_map.cpp  test_kiss_icp.cpp
kiss_icp_ros/: CMakeLists.txt  package.xml
kiss_icp_ros/config/: kiss_icp_params.yaml  kitti_sequences.yaml
kiss_icp_ros/include/ kiss_icp_ros/: kiss_icp_node.h  kiss_icp_node.hpp  kiss_player_node.h  kiss_player_node.hpp
kiss_icp_ros/include/kiss_icp_ros/: kiss_icp_node.hpp  kitti_player_node.hpp
kiss_icp_ros/launch/: evaluation.launch.py  kiss_icp.launch.py  kitti_evaluation.launch.py  kitti_odometry.launch.py  working_kitti.launch.py
kiss_icp_ros/rivz/: default.rviz  kiss_icp.rviz  kiss_icp_evaluation.rviz
kiss_icp_ros/src/: kiss_icp_node.cpp  kitti_player_node.cpp  main.cpp
kiss_icp_voxel/: CMakeLists.txt
kiss_icp_voxel/include/kiss_icp_voxel/: voxel_grid.h
kiss_icp_voxel/src/: test_voxel_grid.cpp  voxel_grid.cpp
robust_icp/: CMakeLists.txt
robust_icp/include/robust_icp/: robust_icp.h
robust_icp/src/: robust_icp.cpp  test_robust_icp.cpp
scan_deskewing/: CMakeLists.txt
scan_deskewing/include/scan_deskewing/: scan_deskewer.h
scan_deskewing/src/: scan_deskewer.cpp  test_scan_deskewing.cpp
